--- a/Codeforces/Codeforces Round #267 (Div. 2)/input.in
+++ b/Codeforces/Codeforces Round #267 (Div. 2)/input.in
@@ -1,8 +1,13 @@
-3
-AbRb r Zz
-4
-xR abRb
-aA xr
-zz Z
-xr y
+7
 
+raki vezde est awjgkawkgjn ttttt raki raks
+
+4
+
+raks rks
+
+rks raks
+
+raki raks
+
+vezde pss
